# fast-rust-serverless-functions

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: fetch_all.rs  insert.rs
